2022-03-20  Charlie Zender  <zender@uci.edu>

	* Build on updated Cori OS with netCDF 4.8.1.1

2022-02-25  Charlie Zender  <zender@uci.edu>

	* Add mss_val_dfl capability to nco_prn_var_val_cmt()

2022-02-24  Charlie Zender  <zender@uci.edu>

	* NCO 5.0.7-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.0.7-alpha02: all: bit_xpl_dbl=52 fix, config.sub/guess update';git push
	git tag -a 5.0.7-alpha02 -m 'Jack Ryan';git push --tags

	* First successful build/check on Apple silicon!

	* Update config.guess from timestamp='2019-07-24' to '2022-01-09' for arm64-apple M1 Max recognition

	* Update config.sub from timestamp='2019-07-24' to '2022-01-03' for arm64-apple M1 Max recognition

2022-02-23  Charlie Zender  <zender@uci.edu>

	* Fix compiler warnings for clang 13.0

2022-02-19  Charlie Zender  <zender@uci.edu>

	* No longer add additional bit to prc_bnr_xpl_rqr for BitGroom NC_DOUBLE
	Restores BG behavior to original Zen16, netcdf-c, CCR implementations

2022-02-18  Charlie Zender  <zender@uci.edu>

	* in.cdl add all tests in CCR tst_bitgroom.c and netcdf-c/tst_quantize.c

	* Set bit_xpl_nbr_sgn_dbl=52 not 53 since limits.h/climit DBL_MANT_DIG=53 (which includes implicit bit)

2022-02-07  Charlie Zender  <zender@uci.edu>

	* NCO 5.0.7-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.0.7-alpha01: add_fll val fix';git push
	git tag -a 5.0.7-alpha01 -m 'Great Horned Owl';git push --tags

	* ncremap/nco_rgr.c: Use mss_val_cmp_dbl not NC_FILL_DOUBLE with --add_fll

2022-02-03  Charlie Zender  <zender@uci.edu>

	* tpt_brt.nco: Remove coordinates attribute in tpt_brt.nco so Panoply plots

2022-02-01  Charlie Zender  <zender@uci.edu>

	* NCO 5.0.6 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.0.6: Alanis';git push
	git tag -a 5.0.6 -m 'ncclimo/ncremap E3SMU Conda PATH; ncclimo bs_nm fl_in[0] fix; ncremap sgs_frc_usr fix;';git push --tags

	* ncremap/ncclimo add HINT for when NCO binaries not found
